# template-master-thesis

./: .gitignore  .latexindent.yaml  .latexmkrc  .mise.toml  .pre-commit-config.yaml  .textlintignore  .textlintrc.json  CLAUDE.md  LICENSE  README.md  abstract.tex  meta.tex  package.json  pnpm-lock.yaml  prh.yml  pyproject.toml  thesis.tex
.claude/skills/ruff/: SKILL.md
.claude/skills/uv/: SKILL.md
.devcontainer/: Dockerfile  devcontainer.json
.github/: renovate.json5
.github/workflows/: build.yml  docker.yml  latexindent.yaml  lint.yaml  release.yml  renovate-validate.yml
bibliography/: references.bib
chapters/: 00_abstract_en.tex  00_abstract_ja.tex  01_introduction.tex  02_related_work.tex  03_methodology.tex  04_experiments.tex  05_conclusion.tex  98_acknowledgment.tex
latex/: tpu-abstract.cls  tpu-biblatex.sty  tpu-common.sty  tpu-meta.sty  tpu-thesis.cls
prh/: dl-en-terms.yml  services.yml  tech-terms.yml
scripts/: main.py
