[project]
name = "template-master-thesis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.11.0",
    "numpy>=2.4.6",
    "polars>=1.41.2",
    "seaborn>=0.13.2",
]

[tool.pyrefly]
project-includes = [
    "**/*.py*",
    "**/*.ipynb",
]

[dependency-groups]
dev = [
    "pre-commit>=4.6.0",
    "pyrefly>=1.1.1",
    "ruff>=0.15.18",
]
